Simple removal on darkmode and adding blockquote

--- a/layouts/shortcodes/quote.html
+++ b/layouts/shortcodes/quote.html
@@ -1,7 +1,7 @@
 <!-- quote html -->
-<div style="margin-left:60px;">
+<blockquote style="margin-left:60px;">
     <text><i>{{.Get "text"}}</i></text>
     <div style="margin-left:25px;">
         <text>- {{.Get "author" | safeHTML}}</text>
     </div>
-</div>
+</blockquote>
