--- a/assets/styles/_callouts.scss
+++ b/assets/styles/_callouts.scss
@@ -9,8 +9,8 @@
   --callout-example-accent: #bda5ff;
   --callout-fail: #ff5252;
   --callout-fail-accent: #ffa8a8;
-  --callout-info: #00b8d4;
-  --callout-info-accent: #69ebff;
+  --callout-info: #828282;
+  --callout-info-accent: #bababa;
   --callout-note: #448aff;
   --callout-note-accent: #a1c4ff;
   --callout-question: #64dd17;
@@ -54,6 +54,7 @@
 
 blockquote.callout-collapsible {
   cursor: pointer;
+  margin-left: 0px;
 
   &.callout-collapsible::after {
     content: '-';
