--- a/layouts/index.html
+++ b/layouts/index.html
@@ -6,7 +6,7 @@
 {{partial "search.html" .}}
 <div class="singlePage">
     <!-- Begin actual content -->
-    {{partial "header.html" .}}
+    <!-- {{partial "header.html" .}} -->
     <article>
         {{partial "toc.html" .}}
         {{partial "textprocessing.html" . }}
