--- a/layouts/shortcodes/quote.html
+++ b/layouts/shortcodes/quote.html
@@ -2,6 +2,6 @@
 <blockquote style="margin-left:60px;">
     <text><i>{{.Get "text"}}</i></text>
     <div style="margin-left:25px;">
-        <text>- {{.Get "author" | safeHTML}}</text>
+        <text style="font-style: italic;">- {{.Get "author" | safeHTML}}</text>
     </div>
 </blockquote>
