--- a/assets/styles/custom.scss
+++ b/assets/styles/custom.scss
@@ -1,13 +1,22 @@
 // Add your own CSS here!
 
+h1 {
+  color: var(--dark);
+}
+
+h2, h3, h4, h5, h6 {
+  color: var(--middlegray);
+}
+
 :root {
   --light: #faf8f8;
   --dark: #141021;
-  --secondary: #284b63;
+  --secondary: #0c6fb1;
   --tertiary: #84a59d;
   --visited: #afbfc9;
   --primary: #f28482;
   --gray: #4e4e4e;
+  --middlegray: #6d6d6d;
   --lightgray: #f0f0f0;
   --outlinegray: #dadada;
   --million-progress-bar-color: var(--secondary);
