--- a/layouts/index.html
+++ b/layouts/index.html
@@ -8,7 +8,7 @@
     <!-- Begin actual content -->
     <!-- {{partial "header.html" .}} -->
     <article>
-        {{partial "toc.html" .}}
+        <!-- {{partial "toc.html" .}} -->
         {{partial "textprocessing.html" . }}
         {{if $.Site.Data.config.enableRecentNotes}}
           {{partial "recent.html" . }}
