--- a/assets/styles/custom.scss
+++ b/assets/styles/custom.scss
@@ -17,6 +17,8 @@ h3 {
 h5 {
   color: var(--dark);
   font-size: 1em;
+  font-weight: 400; // Or use "normal" for less boldness
+  font-style: italic; // Makes the text italic
 }
 
 a > h3 + p {
