--- a/assets/styles/custom.scss
+++ b/assets/styles/custom.scss
@@ -1,5 +1,16 @@
 // Add your own CSS here!
 
+body {
+  margin: 0;
+  height: 100vh;
+  width: 100vw;
+  max-width: 100%;
+  box-sizing: border-box;
+  background-color: var(--light);
+  line-height: 1.1; // Adjust this value as needed
+}
+
+
 h1 {
   color: var(--dark);
 }
