--- a/assets/styles/base.scss
+++ b/assets/styles/base.scss
@@ -37,6 +37,7 @@ body {
   max-width: 100%;
   box-sizing: border-box;
   background-color: var(--light);
+  line-height: 1.1; // Adjust this value as needed
 }
 
 h1, h2, h3, h4, h5, h6, thead {
