--- a/assets/styles/custom.scss
+++ b/assets/styles/custom.scss
@@ -17,12 +17,14 @@ h1 {
 
 h2 {
   color: var(--dark);
-  font-size: 1.75em;
+  font-size: 1.5em;
 }
 
 h3 {
   color: var(--gray3);
   font-size: 1.1em;
+  font-weight: 500; // Or use "normal" for less boldness
+  font-style: italic; // Makes the text italic
 }
 
 h4 {
