--- a/assets/styles/custom.scss
+++ b/assets/styles/custom.scss
@@ -25,6 +25,7 @@ h3 {
   font-size: 1.1em;
   font-weight: 500; // Or use "normal" for less boldness
   font-style: italic; // Makes the text italic
+  margin-bottom: 10px;
 }
 
 h4 {
