--- a/layouts/shortcodes/image.html
+++ b/layouts/shortcodes/image.html
@@ -1,6 +1,6 @@
 <div style="text-align:center;">
     <img src='{{.Get "src"}}' height='{{.Get "height"}}'>
-    <div>
+    <div style="text-align:left; display:inline-block; width:100%;">
         <text style="font-style: italic; font-size: .9em;">{{.Get "caption" | safeHTML}}</text>
     </div>
 </div>
