--- a/assets/styles/_callouts.scss
+++ b/assets/styles/_callouts.scss
@@ -53,30 +53,22 @@
 }
 
 blockquote.callout-collapsible {
-  cursor: pointer;
-  margin-left: 0px;
-
-  &.callout-collapsible::after {
-    content: '-';
-    right: 6px;
-    font-weight: bolder;
-    font-family: Courier New, Courier, monospace;
-  }
+  // cursor: pointer; <- Remove this line
+  // &::after { <- Remove this entire block
+  //   content: '-';
+  //   right: 6px;
+  //   font-weight: bolder;
+  //   font-family: Courier New, Courier, monospace;
+  // }
 }
 
-blockquote.callout-collapsed {
-  & > p { border-bottom-right-radius: 5px !important; }
-  padding-bottom: 0 !important;
-  &::after {
-    content: '+' !important;
-  }
-  & > *:not(:first-child) {
-    display: none !important;
-  }
+blockquote.callout-collapsed > *:not(:first-child) {
+  display: block !important; /* This ensures that the content is always shown */
 }
+
 
 blockquote[class*="-callout"] {
-  margin-right: 0;
+  margin-right: 70px;
   border-radius: 5px;
   position: relative;
   padding-left: 0 !important;
@@ -98,17 +90,17 @@ blockquote[class*="-callout"] {
 }
 
 blockquote[class*="-callout"] > p:first-child::after, blockquote.callout-collapsible::after {
-  display: inline-block;
-  height: 18px;
-  width: 18px;
-  position: absolute;
-  top: 0.4em;
-  margin: 0.2em 0.4em;
+//  display: inline-block;
+//  height: 18px;
+//  width: 18px;
+//  position: absolute;
+//  top: 0.4em;
+//  margin: 0.2em 0.4em;
 }
 
 blockquote[class*="-callout"] > p:first-child {
   font-weight: bold;
-  padding: 0.4em 35px;
+  padding: 0.4em 17px;
 
   &::after {
     left: 0;
