--- a/assets/styles/custom.scss
+++ b/assets/styles/custom.scss
@@ -25,7 +25,8 @@ h3 {
   font-size: 1.1em;
   font-weight: 300; // Or use "normal" for less boldness
   font-style: italic; // Makes the text italic
-  margin-bottom: 0px !important;
+  margin-bottom: 0px;
+  margin-top: 100px;
 }
 
 h4 {
