--- a/assets/styles/custom.scss
+++ b/assets/styles/custom.scss
@@ -8,6 +8,8 @@ body {
   box-sizing: border-box;
   background-color: var(--light);
   line-height: 1.2; // Adjust this value as needed
+  font-weight: 300; // Or use "normal" for less boldness
+  
 }
 
 
