--- a/assets/styles/custom.scss
+++ b/assets/styles/custom.scss
@@ -51,6 +51,12 @@ img {
   border-radius: 3px;
 }
 
+/* Media query for mobile devices */
+@media (max-width: 768px) {
+  img {
+    max-width: 95%; /* You can set this to a higher percentage for mobile */
+  }
+}
 
 a > h3 + p {
   margin-top: 0;
