--- a/assets/styles/custom.scss
+++ b/assets/styles/custom.scss
@@ -58,6 +58,11 @@ img {
   }
 }
 
+.subheading {
+  font-size: 50rem; /* Or any other size */
+  /* Other styling as needed */
+}
+
 a > h3 + p {
   margin-top: 0;
 }
