--- a/assets/styles/custom.scss
+++ b/assets/styles/custom.scss
@@ -58,9 +58,9 @@ img {
   }
 }
 
-.subheading {
-  font-size: 1.25rem; /* Or any other size */
-  /* Other styling as needed */
+.blurb {
+  font-size: 1.25rem;
+  font-weight: 100; // Or use "normal" for less boldness
 }
 
 a > h3 + p {
