--- a/assets/styles/custom.scss
+++ b/assets/styles/custom.scss
@@ -9,6 +9,8 @@ body {
   background-color: var(--light);
   line-height: 1.2; // Adjust this value as needed
   font-weight: 300; // Or use "normal" for less boldness
+  margin-top: 0px;
+  margin-bottom: 0px;
   
 }
 
