more margin tries

--- a/assets/styles/custom.scss
+++ b/assets/styles/custom.scss
@@ -9,8 +9,6 @@ body {
   background-color: var(--light);
   line-height: 1.2; // Adjust this value as needed
   font-weight: 300; // Or use "normal" for less boldness
-  margin-top: 0px;
-  margin-bottom: 0px;
   
 }
 
@@ -29,8 +27,8 @@ h3 {
   font-size: 1.1em;
   font-weight: 300; // Or use "normal" for less boldness
   font-style: italic; // Makes the text italic
-  margin-top: 0px;
-  margin-bottom: 0px;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 h4 {
@@ -62,11 +60,12 @@ img {
 
 .blurb {
   font-size: 1.25rem;
-  font-weight: 800; // Or use "normal" for less boldness
+  font-weight: 200; // Or use "normal" for less boldness
 }
 
 a > h3 + p {
   margin-top: 0;
+  margin-bottom: 0;
 }
 
 :root {
