--- a/assets/styles/custom.scss
+++ b/assets/styles/custom.scss
@@ -6,7 +6,7 @@ body {
   width: 100vw;
   max-width: 100%;
   box-sizing: border-box;
-  background-color: var(--light);
+  background-color: var(--bgtest);
   line-height: 1.2; // Adjust this value as needed
   font-weight: 300; // Or use "normal" for less boldness
   
@@ -77,6 +77,7 @@ a > h3 + p {
 
 :root {
   --light: #faf8f8;
+  --bgtest: #ffffff;
   --dark: #141021;
   --secondary: #0c6fb1;
   --tertiary: #84a59d;
