--- a/assets/styles/custom.scss
+++ b/assets/styles/custom.scss
@@ -87,7 +87,7 @@ a > h3 + p {
   --gray3: #222222;
   --lightgray: #f0f0f0;
   --outlinegray: #dadada;
-  --calloutbg: #96adfc; 
+  --calloutbg: #c3d1ff; 
   --million-progress-bar-color: var(--secondary);
   --highlighted: #947fe224;
 }
