--- a/assets/styles/_callouts.scss
+++ b/assets/styles/_callouts.scss
@@ -73,7 +73,7 @@ blockquote[class*="-callout"] {
   padding-left: 0 !important;
   padding-bottom: 0.25em;
   color: var(--dark);
-  background-color: var(--lightgray);
+  background-color: var(--calloutbg);
   border-left: 6px solid var(--primary) !important;
   & > p {
     border-top-right-radius: 5px;
