--- a/assets/styles/_callouts.scss
+++ b/assets/styles/_callouts.scss
@@ -9,8 +9,8 @@
   --callout-example-accent: #bda5ff;
   --callout-fail: #ff5252;
   --callout-fail-accent: #ffa8a8;
-  --callout-info: #828282;
-  --callout-info-accent: #bababa;
+  --callout-info: #5f71ae;
+  --callout-info-accent: #fce4967e;
   --callout-note: #448aff;
   --callout-note-accent: #a1c4ff;
   --callout-question: #64dd17;
