--- a/assets/styles/custom.scss
+++ b/assets/styles/custom.scss
@@ -76,7 +76,7 @@ a > h3 + p {
 
 blockquote {
   margin-left: 60px;
-  border-left: 3px solid var(--secondary);
+  border-left: 3px solid var(--quote);
   padding-left: 1em;
   transition: border-color 0.2s ease;
   p:last-of-type {
