--- a/assets/styles/base.scss
+++ b/assets/styles/base.scss
@@ -144,7 +144,7 @@ sup {
 
 blockquote {
   margin-left: 60px;
-  border-left: 3px solid var(--quote);
+  border-left: 3px solid var(--secondary);
   padding-left: 1em;
   transition: border-color 0.2s ease;
   p:last-of-type {
