--- a/assets/styles/custom.scss
+++ b/assets/styles/custom.scss
@@ -84,6 +84,23 @@ blockquote {
   }
 }
 
+/* Reset margins for nav and adjacent elements */
+nav,
+nav + *,
+nav + hr,
+nav + header,
+nav + p {
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-top: 0;
+  padding-bottom: 0;
+}
+
+/* Specific style for nav div */
+nav div {
+  /* Add specific margins or padding if needed */
+}
+
 :root {
   --light: #faf8f8;
   --bgtest: #ffdfbd3a;
