--- a/layouts/shortcodes/image-dual.html
+++ b/layouts/shortcodes/image-dual.html
@@ -15,7 +15,7 @@
             <img src='{{.Get "src2"}}' style='height: auto; max-width: 100%;'>
         </div>
     </div>
-    <div style="text-align:center;">
+    <div style="text-align:left;">
          <text style="font-style: italic; font-size: .9em;">{{.Get "caption" | safeHTML}}</text>
      </div>
 </div>
