--- a/layouts/shortcodes/image.html
+++ b/layouts/shortcodes/image.html
@@ -1,5 +1,5 @@
 <div style="text-align:center;">
-    <img src='{{.Get "src"}}' height='{{.Get "height"}}'>
+    <img src='{{.Get "src"}}' style='height: {{.Get "height"}}; width: auto'>
     <div style="text-align:left; display:inline-block; width:70%;">
         <text style="font-style: italic; font-size: .9em;">{{.Get "caption" | safeHTML}}</text>
     </div>
