--- a/assets/styles/custom.scss
+++ b/assets/styles/custom.scss
@@ -26,7 +26,7 @@ h3 {
   font-size: 1.05em;
   font-weight: 350; // Or use "normal" for less boldness
   font-style: italic; // Makes the text italic
-  margin-top: 0;
+  margin-top: 16px;
   margin-bottom: 0;
 }
 
