--- a/assets/styles/custom.scss
+++ b/assets/styles/custom.scss
@@ -6,6 +6,8 @@ body {
   width: 100vw;
   max-width: 100%;
   box-sizing: border-box;
+  margin-top: 0px;
+  margin-bottom: 0px;
   background-color: var(--bgtest);
   line-height: 1.2; // Adjust this value as needed
   font-weight: 300; // Or use "normal" for less boldness
