--- a/assets/styles/custom.scss
+++ b/assets/styles/custom.scss
@@ -92,7 +92,7 @@ blockquote {
   --dark: #141021;
   --secondary: #0c6fb1;
   --tertiary: #84a59d;
-  --quote: #FCB196;
+  --quote: #fcb196;
   --visited: #afbfc9;
   --primary: #1b6040;
   --gray: #4e4e4e;
