--- a/layouts/shortcodes/memento.html
+++ b/layouts/shortcodes/memento.html
@@ -1,6 +1,6 @@
-<div style="text-align:center;">
-    <img src='{{.Get "src"}}' style='height: {{.Get "height"}}; width auto'>
-    <div style="text-align:left; display:inline-block; width:100%;">
-        <text style="font-style: italic; font-size: .9em">{{.Get "caption" | safeHTML}}</text>
+<div style="text-align: center;">
+    <img src='{{.Get "src"}}' style='max-width: 70%; height: auto; margin: auto;'>
+    <div style="text-align: left; width: 70%; margin: auto;">
+        <text style="font-style: italic; font-size: .9em;">{{.Get "caption" | safeHTML}}</text>
     </div>
 </div>
