--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -8,7 +8,7 @@
     <!-- Begin actual content -->
     {{partial "header.html" .}}
     <article>
-      {{if .Title}}<h1>{{ .Title }}</h1>{{end}}
+      <!-- {{if .Title}}<h1>{{ .Title }}</h1>{{end}} -->
       <!-- <p class="meta">
         {{ i18n "last_updated" }} {{ partial "date-fmt.html" .}} 
           {{ partial "github.html" . }}
