--- a/layouts/shortcodes/image.html
+++ b/layouts/shortcodes/image.html
@@ -1,6 +1,6 @@
-<div style="text-align:center;">
+<div style="display: flex; flex-wrap:wrap; flex-direction: column; align-content: center; text-align:center;">
     <img src='{{.Get "src"}}' style='height: {{.Get "height"}}; width auto'>
-    <div style="text-align:left; display:inline-block; width:70%;">
+    <div style="text-align:left; display:inline-block;">
         <text style="font-style: italic; font-size: .9em;">{{.Get "caption" | safeHTML}}</text>
     </div>
 </div>
