Adding party cursors

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -30,5 +30,6 @@
     </article>
     {{partial "footer.html" .}}
 </div>
+<script src="https://cursor-party.jgcfyidev.partykit.dev/cursors.js"></script>
 </body>
 </html>
