--- a/layouts/shortcodes/image.html
+++ b/layouts/shortcodes/image.html
@@ -1,5 +1,5 @@
 <div style="display: flex; flex-wrap:wrap; flex-direction: column; align-content: center; text-align:center;">
-    <img src='{{.Get "src"}}' style='height: {{.Get "height"}}; width auto'>
+    <img src='{{.Get "src"}}' style='height: {{.Get "height"}}; width auto; margin: auto;'>
     <div style="text-align:left; display:inline-block;">
         <text style="font-style: italic; font-size: .9em;">{{.Get "caption" | safeHTML}}</text>
     </div>
