Moving party cursors to render after body

--- a/layouts/partials/contact.html
+++ b/layouts/partials/contact.html
@@ -16,4 +16,5 @@
             {{- end -}}
         </ul>
     </footer>
+    <script src="https://cursor-party.jgcfyidev.partykit.dev/cursors.js"></script>
 </div>
