--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -12,7 +12,7 @@
   <meta property="og:title" content="{{ .Title }}">
   <meta property="og:description" content="{{if .IsHome}}{{$data.description | default $.Site.Data.config.description}}{{else}}{{.Summary}}{{end}}">
   <meta property="og:type" content="website">
-  <meta property="og:image" content="{{.Site.BaseURL}}overlay.jpeg">
+  <meta property="og:image" content="{{ if .Params.customImage }}{{ .Site.BaseURL}}{{ .Params.customImage }}{{ else }}{{ .Site.BaseURL }}overlay.jpeg{{ end }}">
   <meta property="og:url" content="{{ .Permalink }}">
   <meta property="og:width" content="200">
   <meta property="og:height" content="200">
