--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -16,10 +16,11 @@
   <meta property="og:url" content="{{ .Permalink }}">
   <meta property="og:width" content="200">
   <meta property="og:height" content="200">
-  <meta name="twitter:card" content="summary" />
-  <meta name="twitter:title" content="{{ .Title }}" />
-  <meta name="twitter:description" content="{{if .IsHome}}{{$data.description | default $.Site.Data.config.description}}{{else}}{{.Summary}}{{end}}" />
-  <meta name="twitter:image" content="{{.Site.BaseURL}}overlay.jpeg">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="{{ .Title }}">
+  <meta name="twitter:site" content="@jgcfyi">
+  <meta name="twitter:description" content="{{ if .Summary }}{{ .Summary }}{{ else }}{{$data.description | default $.Site.Data.config.description}}{{ end }}">
+  <meta name="twitter:image" content="{{ if .Params.customImage }}{{ .Site.BaseURL}}{{ .Params.customImage }}{{ else }}{{ .Site.BaseURL }}overlay.jpeg{{ end }}">
   {{ range $data.links }}
     {{ if strings.Contains .link "twitter.com" }}
       {{ $twitter_handle := index (split .link "/") (sub (len (split .link "/")) 1) }}
