--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -12,7 +12,7 @@
   <meta property="og:title" content="{{ .Title }}">
   <meta property="og:description" content="{{if .IsHome}}{{$data.description | default $.Site.Data.config.description}}{{else}}{{.Summary}}{{end}}">
   <meta property="og:type" content="website">
-  <meta property="og:image" content="{{ if .Params.customImage }}{{ .Site.BaseURL}}{{ .Params.customImage }}{{ else }}{{ .Site.BaseURL }}overlay.jpeg{{ end }}">
+  <meta property="og:image" content="{{ if .Params.customImage }}{{ .Site.BaseURL}}{{ .Params.customImage }}{{ else }}{{ .Site.BaseURL }}preview.png{{ end }}">
   <meta property="og:url" content="{{ .Permalink }}">
   <meta property="og:width" content="200">
   <meta property="og:height" content="200">
@@ -20,7 +20,7 @@
   <meta name="twitter:title" content="{{ .Title }}">
   <meta name="twitter:site" content="@jgcfyi">
   <meta name="twitter:description" content="{{ if .Summary }}{{ .Summary }}{{ else }}{{$data.description | default $.Site.Data.config.description}}{{ end }}">
-  <meta name="twitter:image" content="{{ if .Params.customImage }}{{ .Site.BaseURL}}{{ .Params.customImage }}{{ else }}{{ .Site.BaseURL }}overlay.jpeg{{ end }}">
+  <meta name="twitter:image" content="{{ if .Params.customImage }}{{ .Site.BaseURL}}{{ .Params.customImage }}{{ else }}{{ .Site.BaseURL }}preview.png{{ end }}">
   {{ range $data.links }}
     {{ if strings.Contains .link "twitter.com" }}
       {{ $twitter_handle := index (split .link "/") (sub (len (split .link "/")) 1) }}
